Move pin count on small screens Added country page Fix preview build missing assets

--- a/src/app/map.leaflet/map.component.css
+++ b/src/app/map.leaflet/map.component.css
@@ -18,7 +18,7 @@
   display: block;
   position: absolute;
   z-index: 1000;
-  padding: 13px 10px;
+  padding: 30px 10px;
   left: 0;
   bottom: 0;
 }
@@ -175,6 +175,7 @@ span {
     top: 0;
     left: unset;
     bottom: unset;
+    padding: 0px 10px;
   }
 
   button {
